--- a/contacto.css
+++ b/contacto.css
@@ -1,13 +1,5 @@
-.img1 { 
-    width: 30rem;
-    height: 20rem;
-}
 
-.img2 {
-    width: 30rem;
-    height: 20rem;
-}
-.vertical {
+/*.vertical {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -15,49 +7,69 @@
     margin: 3rem;
     font-size: 5rem;
 
+}*/
+
+h1{
+    color: white;
+    text-align: center;
+    font-size: 3rem;
 }
 
-body {
+.container {
     font-family: Arial, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
+    background-color: rgb(  	18 15 15);
 }
+
+
 
 form {
     width: 50rem;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    border: 1rem solid rgb(100, 95, 95);
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
+
 }
 
 label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
+    color: white;
 }
 
-input,
-textarea {
+input {
     width: 100%;
-    padding: 0.5rem;
+    padding: 0.6rem;
     margin-bottom: 1rem;
     box-sizing: border-box;
+}
+
+textarea {
+    padding: 4rem;
+    width: 84%;
+    margin-bottom: 1rem;
 }
 
 button {
     background-color: red;
     color: white;
-    padding: 10px 15px;
+    padding: 0.7rem 1.5rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+
+
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #ac0b0b;
 }
