--- a/nav.css
+++ b/nav.css
@@ -43,6 +43,7 @@ nav{background-color: rgb(0, 0, 0);
           display: flex;
           align-items: center;  
           min-height: 10rem;  
+          margin: 0.5rem;
          }
 .logo_nav img{width: 60%;
               height: 60%;
@@ -72,10 +73,14 @@ nav{background-color: rgb(0, 0, 0);
                        width: 100%;
                        gap: 1rem;
                       }
+.hamburguesa_menu{font-size: 2rem;
+display: none;}
 
 @media screen and (max-width: 1000px){
     .redes_sociales_nav{display: none;}
     .menu_nav{width: 80%;}
+    .logo_nav{width:20%;
+            height: 20%;}
     
 }
 
@@ -83,10 +88,16 @@ nav{background-color: rgb(0, 0, 0);
     nav{justify-content: center;
         }
     .menu_nav ul{display: none;}
-    .logo_nav{justify-content: center;}
+    .logo_nav{justify-content: center;
+              margin-left: 3rem;
+              width: 70%;
+              height: 70%;}
     .logo_nav img{justify-content: center;
-                  width: 100%;
-                  height: 100%;
+                  width: 80%;
+                  height: 80%;
                   margin: auto;}
+    .hamburguesa_menu{display: flex;
+                      margin-right: 3rem;
+                    font-size: 3rem;}
     
 }
