--- a/general.css
+++ b/general.css
@@ -102,11 +102,12 @@
         display: flex;
         align-items: center;
         min-height: 10rem;
+        margin: 0.5rem;
     }
 
     .logo_nav img {
-        width: 50%;
-        height: 50%;
+        width: 60%;
+        height: 60%;
         rotate: 2.80;
         border: 0.1rem solid rgb(255, 255, 255);
         border-radius: 100%;
@@ -114,7 +115,7 @@
     }
 
     .menu_nav {
-        width: 40%;
+        width: 50%;
         justify-content: center;
         align-items: center;
         color: white;
@@ -141,6 +142,9 @@
         width: 100%;
         gap: 1rem;
     }
+
+    .hamburguesa_menu{font-size: 2rem;
+        display: none;}
 
     /* Patrocinadores animation */
     .marquee-infinite div {
@@ -176,6 +180,14 @@
         }
     }
 
+    @media screen and (max-width: 1000px){
+        .redes_sociales_nav{display: none;}
+        .menu_nav{width: 80%;}
+        .logo_nav{width:20%;
+                height: 20%;}
+        
+    }
+
     /* Media-Queries */
     @media screen and (max-width: 768px) {
         footer {
@@ -190,6 +202,24 @@
             width: 300%;
         }
 
+    }
+
+    @media screen and (max-width: 650px) {
+        nav{justify-content: center;
+            }
+        .menu_nav ul{display: none;}
+        .logo_nav{justify-content: center;
+                  margin-left: 3rem;
+                  width: 70%;
+                  height: 70%;}
+        .logo_nav img{justify-content: center;
+                      width: 80%;
+                      height: 80%;
+                      margin: auto;}
+        .hamburguesa_menu{display: flex;
+                          margin-right: 3rem;
+                        font-size: 3rem;}
+        
     }
 
     @media screen and (max-width: 380px) {
