--- a/contacto.css
+++ b/contacto.css
@@ -1,14 +1,4 @@
 
-/*.vertical {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 3rem;
-    font-size: 5rem;
-
-}*/
-
 h1{
     color: white;
     text-align: center;
@@ -22,7 +12,7 @@ h1{
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: rgb(  	18 15 15);
+    background-color: rgb( 18 15 15);
 }
 
 
@@ -30,14 +20,10 @@ h1{
 form {
     width: 50rem;
     padding: 2rem;
-    border: 1rem solid rgb(100, 95, 95);
-    border-radius: 1rem;
-    box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
-
 }
 
 label {
-    display: block;
+    display: flex;
     margin-bottom: 0.5rem;
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
@@ -62,14 +48,71 @@ button {
     color: white;
     padding: 0.7rem 1.5rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.3rem;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-
 
 }
 
 button:hover {
     background-color: #ac0b0b;
+}
+
+.dos { 
+    background-color: rgb( 18 15 15);
+    color: white;
+}
+
+
+p { 
+    text-align: left;
+    font-size: 1.1rem;
+}
+
+h2 {
+    color: white;
+    font-size: 2rem;
+}
+
+
+.informacion { 
+    margin-left: 6rem;
+
+}
+
+.mapa { 
+
+    padding: 6rem;  
+    
+}
+
+
+@media screen and (max-width: 1000px){
+   form {width: 50%;
+ }
+    
+    
+}
+
+/* Media-Queries */
+@media screen and (max-width: 768px) {
+    form {width: 35%;
+        height: 35%; }
+
+}
+
+@media screen and (max-width: 680px) {
+    form {width: 30%;
+        height: 30%; }
+    
+}
+
+@media screen and (max-width: 500px) {
+    form {width: 20%;
+            height: 20%; 
+}
+
+    img { height: 40%;
+        width: 40%;
+}
+
 }
