--- a/calendario.css
+++ b/calendario.css
@@ -44,7 +44,67 @@
   width: 8rem; 
   height: 10.5rem;
         }
+input{
+  background-color: #DA121A;
+  color: white;
+  border-color: #DA121A;
+}
 
-       
+  /* Media-Queries */
+@media screen and (max-width: 768px) {
+
+
+  .entradas{
+    height: 5rem;
+    width: 8rem;
+  }
+  .home{height: 5rem;
+    width: 8rem; }
+    img { height: 40%;
+      width: 40%}
+      input {
+        height: 3rem;
+        width: 7rem;
+      }   
+      }
+
+@media screen and (max-width: 680px) {
+
+
+  .entradas {
+        height: 5rem;
+        width: 5rem;
+  }
+  .home{height: 5rem;
+    width: 5rem; }
+
+  input {
+    height: 2.5rem;
+    width: 3.5rem;
+    font-size: 0.6rem;
+  }
+    img { height: 50%;
+      width: 50%;
+}
+}
+
+@media screen and (max-width: 500px) {
+ 
+
+.entradas { height: 2.8rem;
+  width: 4rem;
+}
+.home{height: 2.9rem;
+width: 4rem; }
+img { height: 40%;
+width: 40%;
+}
+input {
+  height: 1rem;
+  width: 3rem;
+  font-size: 0.5rem;
+}
+
+}     
            
 
