--- a/venta_de_entradas.css
+++ b/venta_de_entradas.css
@@ -1,4 +1,10 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  text-align: center;
+  font-size: 16px;
+}
 
 body{
   margin: 0;
@@ -27,8 +33,8 @@ body{
 
   /* Imagen Left */
   .image-Izquierda {
-    width: 9rem;
-    height: 17rem;
+    width: 6.5rem;
+    height: 12rem;
     background-size: cover;
     transition: background-image 0.3s ease; /* Efecto de transición suave */
     border-radius: 5%;
@@ -42,8 +48,8 @@ body{
   }
   /* Imagen Right */
   .image-Derecha {
-    width: 9rem;
-    height: 17rem;
+    width:6.5rem;
+    height:12rem;
     background-size: cover;
     transition: background-image 0.3s ease; 
     border-radius: 5%;
@@ -55,8 +61,8 @@ body{
   }
   /* Imagen Top */
   .image-Centro-Arriba {
-    width: 17rem;
-    height: 9rem;
+    width:12rem;
+    height: 6.5rem;
     background-size: cover;
     transition: background-image 0.3s ease; 
     border-radius: 5%;
@@ -70,8 +76,8 @@ body{
 
    /* Imagen Bottom */
   .image-Centro-Abajo {
-    width:17rem;
-    height:9rem;
+    width:12rem;
+    height:6.5rem;
     background-size: cover;
     transition: background-image 0.3s ease; 
     border-radius: 5%;
@@ -84,8 +90,8 @@ body{
   /* Imagen Centro */
 
   .image-Centro {
-    width: 17rem;
-    height: 9rem;
+    width: 12rem;
+    height: 6.5rem;
     background-size: cover;
     border-radius: 5%;
     background-image: url(img_Estadio/Center.png)  
@@ -100,6 +106,8 @@ body{
   max-width: 30rem;
   min-width: 18rem;
   width: 30vw;
+  margin: 2rem auto ;
+  border-radius: 5%;
 
 }
 
@@ -108,6 +116,7 @@ body{
   padding: 0.5rem;
   text-align: left;
   cursor: pointer;
+ 
 }
 
 /* Cambio de color al pasar el cursor sobre las celdas */
@@ -117,6 +126,7 @@ body{
 
 .section-flexible{
   display: flex;
+  flex-wrap: wrap;justify-content: center;
 }
 
 
@@ -125,8 +135,9 @@ form{
   margin: 0 auto;
   max-width: 30rem;
   min-width: 18rem;
-  width: 20vw;
+  width: 50%;
   padding: 2rem;
+  border-radius: 5%;
 }
 label{
   display: block;
@@ -138,4 +149,35 @@ input,textarea,select{
   margin: 10px 0 0 0;
   min-height: 2em;
   
+}
+
+/* Media-Queries */
+@media screen and (max-width: 768px) {
+  .section-images{
+    width: 50%;
+  }
+  form {
+    width: 50%;
+  }
+
+}
+
+@media screen and (max-width: 650px) {
+  .section-images{
+    width: 80%;
+  }
+  form {
+    width: 70%;
+  }
+  
+}
+
+@media screen and (max-width: 380px) {
+  .section-images{
+    width: 100%;
+  }
+  form {
+    width: 80%;
+  }
+
 }
