--- a/calendario.css
+++ b/calendario.css
@@ -47,11 +47,20 @@
 input{
   background-color: #DA121A;
   color: white;
-  border-color: #DA121A;
+  border: none;
+  cursor: pointer;
+}
+input:hover{
+  background-color: darkred;
 }
 
+
+
+
+
+
   /* Media-Queries */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
 
 
   .entradas{
@@ -82,6 +91,7 @@ input{
     height: 2.5rem;
     width: 3.5rem;
     font-size: 0.6rem;
+
   }
     img { height: 50%;
       width: 50%;
