--- a/calendario.css
+++ b/calendario.css
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  margin-top: 1.5rem;
 }
 .entrada_2 {
   align-items: center;
