--- a/venta_de_entradas.css
+++ b/venta_de_entradas.css
@@ -12,9 +12,12 @@ body{
   min-height: 100vh;
  
 }
+.section-flexible{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .estadio-container {
-
- 
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -23,6 +26,9 @@ body{
   
 
     
+  }
+  .section-images{
+    margin: 2rem 5rem;
   }
  
   .centro{
@@ -34,30 +40,35 @@ body{
   /* Imagen Left */
   .image-Izquierda {
     width: 6.5rem;
-    height: 12rem;
+    height: 14rem;
     background-size: cover;
     transition: background-image 0.3s ease; /* Efecto de transición suave */
     border-radius: 5%;
     /* Establecer la imagen de fondo predeterminada */
-    background-image: url(img_Estadio/Left.png)
+    background-image: url(img_Estadio/Left.png);
+    
+    
   }
   
   /* Change the background image on hover */
   .image-Izquierda:hover {
     background-image: url('img_Estadio/Izquierda.png');
+    transform: scale(1.6);
   }
   /* Imagen Right */
   .image-Derecha {
     width:6.5rem;
-    height:12rem;
+    height:14rem;
     background-size: cover;
     transition: background-image 0.3s ease; 
     border-radius: 5%;
-    background-image: url(img_Estadio/Right.png)
+    background-image: url(img_Estadio/Right.png);
+
   }
   
   .image-Derecha:hover {
     background-image: url(img_Estadio/Derecha.png);
+    transform: scale(1.6);
   }
   /* Imagen Top */
   .image-Centro-Arriba {
@@ -71,6 +82,7 @@ body{
   
   .image-Centro-Arriba:hover {
     background-image: url(img_Estadio/Centro_Arriba.png);
+    transform: scale(1.6);
   }
 
 
@@ -81,11 +93,12 @@ body{
     background-size: cover;
     transition: background-image 0.3s ease; 
     border-radius: 5%;
-    background-image: url(img_Estadio/Bottom.png)
+    background-image: url(img_Estadio/Bottom.png);
   }
   
   .image-Centro-Abajo:hover {
     background-image: url(img_Estadio/Centro_abajo.png);
+    transform: scale(1.6);
   }
   /* Imagen Centro */
 
@@ -94,45 +107,46 @@ body{
     height: 6.5rem;
     background-size: cover;
     border-radius: 5%;
-    background-image: url(img_Estadio/Center.png)  
+    background-image: url(img_Estadio/Center.png) ; 
   }
   
 
   /* Estilo de las celdas de la tabla */
-#miTabla {
+table {
   background-color: var(--black);
   color: var(--gray);
   border-collapse: collapse;
-  max-width: 30rem;
-  min-width: 18rem;
-  width: 30vw;
-  margin: 2rem auto ;
+  overflow: hidden;
+  min-width: 30vh;
+  margin: 2rem 5rem ;
   border-radius: 5%;
+  box-shadow:0 0 10px rgba(117, 117, 117, 0.1);
+ 
 
 }
-
-#miTabla th, #miTabla td {
-  border: 1px solid #ddd;
-  padding: 0.5rem;
-  text-align: left;
+table th{
+  padding: 1rem;
+ 
+}
+table td {
+ 
+  text-align: center;
   cursor: pointer;
+
  
 }
 
 /* Cambio de color al pasar el cursor sobre las celdas */
-#miTabla tr:hover {
+table tr:hover {
   background-color:var(--red);
 }
 
-.section-flexible{
-  display: flex;
-  flex-wrap: wrap;justify-content: center;
-}
+
 
 
 form{
   background-color:var(--black);
-  margin: 0 auto;
+  margin: 3rem auto;
   max-width: 30rem;
   min-width: 18rem;
   width: 50%;
