--- a/plantillas.css
+++ b/plantillas.css
@@ -2,7 +2,10 @@ main{display:flex;
      flex-direction: column;
      justify-content: center;
      width: 100%;
-     background-image:image(/img_baloncesto/cancha_baloncesto_vertical.png)
+     background-image: url(/vertical_2_prueba.png);
+     background-repeat: no-repeat;
+     background-size: 100%;
+     margin-bottom: 5rem;
     }
 /*div de contenedor de los 2 entrenadores*/
 .plantilla_entrenador{display: flex;
@@ -19,11 +22,12 @@ main{display:flex;
                      align-items: center;
                      flex-direction: row;
                      margin-top: 3rem;
+                     margin-bottom: 2rem;
                      }
 /*div contenedor de imagen + nombre y posicion entrendores*/
 .plantilla_nombre_entrenadores{display: flex;
-                               width: 60%;
-                               height: 60%;
+                               width: 40%;
+                               height: 40%;
                                flex-direction: column;
                                align-items: center;
                                justify-content: center; 
@@ -31,24 +35,25 @@ main{display:flex;
                               }
 /*div contenedor de imagen + nombre y posicion jugadores*/
 .plantilla_nombre{display: flex;
-                  width: 30%;
-                  height: 30%;
+                  width: 27%;
+                  height: 27%;
                   flex-direction: column;
                   align-items: center;
                   justify-content: center; 
-                  margin-top: 1rem;      
+                  margin-top: 1rem;  
+                  margin-bottom: 3rem;    
                  }
 /*div de la imagen del jugador*/
 .imagenes_jugadores{width: 80%;
                     height: 80%;
-                    border: 0.1rem solid black;
+                    border: 0.1rem solid red;
                     padding: 0.1rem;
                     justify-content: center;
                    }
 /*div de la imagen del entrenador*/
 .imagenes_entrenadores{width: 60%;
                        height: 60%;
-                       border: 0.1rem solid black;
+                       border: 0.1rem solid red;
                        padding: 0.1rem;
                        justify-content: center;
                       }
@@ -63,3 +68,34 @@ main{display:flex;
                  font-size: 10rem;
                  
                 }
+/*Efectos de agrandacion a la hora de poner el cursor*/
+.plantilla_nombre_entrenadores:hover{width: 35%;
+                                      height: 35%;
+                                      background-color: red;
+                                      backface-visibility: 90%;
+                                      transition: 0.5s;
+                                      transition: 2seg;
+                                      overflow: hidden;
+                                      transform: scale(1.2);
+                                      border-radius: 5%;
+                                      box-shadow: 0px 15px 25px grey;
+                                      position: relative;
+                                     }
+.plantilla_nombre:hover{width: 25%;
+                         height: 25%;
+                         background-color: red;
+                         backface-visibility: 90%;
+                         transition: 0.5s;
+                         overflow: hidden;
+                         transform: scale(1.2);
+                         border-radius: 5%;
+                         box-shadow: 0px 5px 25px grey;
+                         position: relative;
+                        
+                        }
+.plantilla_jugadores:hover{display: inline-flex}
+
+@media screen and (max-width: 1000px){
+  
+    
+}
