--- a/contacto.css
+++ b/contacto.css
@@ -5,6 +5,12 @@ h1{
     font-size: 3rem;
 }
 
+main { background-image: url(img/canchatina.webp);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-size: cover;
+
+}
 
 .container {
     font-family: Arial, sans-serif;
@@ -13,13 +19,12 @@ h1{
     justify-content: center;
     padding: 5rem;
     padding-bottom: 8rem;
-    background-color:  rgb(20, 20, 20);
 }
-
-
 
 form {
     width: 50rem;
+    font-weight: 600;
+
 }
 
 label {
@@ -50,24 +55,22 @@ button {
     border: none;
     border-radius: 0.3rem;
     cursor: pointer;
-
 }
 
 button:hover {
     background-color: #ac0b0b;
 }
 
-.dos { 
-    background-color:  rgb(20, 20, 20);
+.dos {
     color: white;
-}
 
+}
 
 p { 
     text-align: left;
     font-size: 1.1rem;
     margin-left: 6rem;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 h2 {
@@ -81,26 +84,29 @@ h2 {
 iframe { 
     padding: 10%;
     width: 40rem;
-    height: 40rem;}
+    height: 40rem;
+}
 
 
 @media screen and (max-width: 1000px){
-   
+
 }
 
 /* Media-Queries */
 @media screen and (max-width: 768px) {
     form {width: 90%;
         height: 90%; }
+        
     textarea {width: 69%;}
 
-    iframe { width: 80%;
-        height: 80%;}
+    iframe {width: 80%;
+            height: 80%;}
 }
 
 @media screen and (max-width: 600px) {
     form {width: 75%;
         height: 75%;}
+
     textarea {width: 10rem;}
 
     iframe { width: 80%;
@@ -110,13 +116,10 @@ iframe {
 
 @media screen and (max-width: 500px) {
     form {width: 90%;
-            height: 90%; 
-}
+          height: 90%;}
 
-p { font-size: 1.2rem;}
+    p {font-size: 1.2rem;}
 
-    iframe { height: 75%;
-        width: 75%;
-}
-
+    iframe {height: 75%;
+            width: 75%;}
 }
