--- a/general.css
+++ b/general.css
@@ -65,6 +65,9 @@
         border: 0.1rem solid white;
         border-radius: 100%;
         padding: 0.5rem;
+        margin-top: 1rem;
+        justify-content: center;
+        align-items: center;
     }
 
     .footer-menu {
@@ -96,12 +99,12 @@
     }
 
     .logo_nav {
-        width: 10%;
-        height: 10%;
+        width: 5%;
+        height: 5%;
         justify-content: center;
         display: flex;
         align-items: center;
-        min-height: 10rem;
+        min-height: 7rem;
         margin: 0.5rem;
     }
 
