--- a/inicio.css
+++ b/inicio.css
@@ -195,13 +195,15 @@
     .noticia img {
         width: 100%;
     }
+
     .butn {
         display: flex;
         align-self: center;
+        justify-content: center;
     }
 
 
-    .body {
+    /* .body {
         height: 600px;
         margin: 0;
         display: grid;
@@ -210,7 +212,30 @@
         align-items: center;
         justify-items: center;
     }
-    
+    */
+    .body {
+        height: 600px;
+        margin: 0;
+        padding: auto;
+        display: grid;
+        grid-template-rows: 500px 100px;
+        grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+        align-items: center;
+        justify-items: center;
+        justify-content: center;
+    }
+
+    .jugador {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .equipo-img {
+        display: flex;
+        justify-content: center;
+    }
+
     div#carousel {
         grid-row: 1 / 2;
         grid-column: 1 / 8;
@@ -227,92 +252,83 @@
         --position: 1;
         pointer-events: none;
     }
-    
+
     div.item {
         position: absolute;
         width: 300px;
         height: 400px;
         background-color: white;
-        border: 0.1rem solid gray;
+        border: 0.15rem solid var(--gray);
+        border-radius: 0.3rem;
         --r: calc(var(--position) - var(--offset));
         --abs: max(calc(var(--r) * -1), var(--r));
         transition: all 0.25s linear;
         transform: rotateY(calc(-10deg * var(--r))) translateX(calc(-300px * var(--r)));
         z-index: calc((var(--position) - var(--abs)));
     }
-    
-    .jugador {
-        display: flex;
-        flex-direction: column;
-        padding: 1rem;
-    }
-    
-    .equipo-img {
-        display: flex;
-        justify-content: center;
-    }
-    
+
+
     div.item:nth-of-type(1) {
         --offset: 1;
     }
-    
+
     div.item:nth-of-type(2) {
         --offset: 2;
     }
-    
+
     div.item:nth-of-type(3) {
         --offset: 3;
     }
-    
+
     div.item:nth-of-type(4) {
         --offset: 4;
     }
-    
+
     div.item:nth-of-type(5) {
         --offset: 5;
     }
-    
+
     input:nth-of-type(1) {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
     }
-    
+
     input:nth-of-type(1):checked~div#carousel {
         --position: 1;
     }
-    
+
     input:nth-of-type(2) {
         grid-column: 3 / 4;
         grid-row: 2 / 3;
     }
-    
+
     input:nth-of-type(2):checked~div#carousel {
         --position: 2;
     }
-    
+
     input:nth-of-type(3) {
         grid-column: 4 /5;
         grid-row: 2 / 3;
     }
-    
+
     input:nth-of-type(3):checked~div#carousel {
         --position: 3;
     }
-    
+
     input:nth-of-type(4) {
         grid-column: 5 / 6;
         grid-row: 2 / 3;
     }
-    
+
     input:nth-of-type(4):checked~div#carousel {
         --position: 4;
     }
-    
+
     input:nth-of-type(5) {
         grid-column: 6 / 7;
         grid-row: 2 / 3;
     }
-    
+
     input:nth-of-type(5):checked~div#carousel {
         --position: 5;
     }
