--- a/inicio.css
+++ b/inicio.css
@@ -332,3 +332,65 @@
     input:nth-of-type(5):checked~div#carousel {
         --position: 5;
     }
+
+    /* Media-Queries */
+    @media screen and (max-width: 768px) {
+        footer {
+            font-size: var(--boton-tab);
+        }
+
+        .marquee-infinite img {
+            width: 15%;
+        }
+
+        .marquee-infinite div {
+            width: 300%;
+        }
+
+    }
+
+    @media screen and (max-width: 650px) {
+        nav {
+            justify-content: center;
+        }
+
+        .menu_nav ul {
+            display: none;
+        }
+
+        .logo_nav {
+            justify-content: center;
+            margin-left: 3rem;
+            width: 70%;
+            height: 70%;
+        }
+
+        .logo_nav img {
+            justify-content: center;
+            width: 80%;
+            height: 80%;
+            margin: auto;
+        }
+
+        .hamburguesa_menu {
+            display: flex;
+            margin-right: 3rem;
+            font-size: 3rem;
+        }
+
+    }
+
+    @media screen and (max-width: 380px) {
+        footer {
+            .marquee-infinite img {
+                width: 20%;
+            }
+
+            .marquee-infinite div {
+                width: 500%;
+            }
+
+            font-size: var(--boton-mov);
+        }
+
+    }
