--- a/general.css
+++ b/general.css
@@ -3,7 +3,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Inter', sans-serif;
-        text-align: center;
+        text-align: left;
         font-size: 16px;
     }
 
