--- a/inicio.css
+++ b/inicio.css
@@ -151,9 +151,11 @@
     .eventos-cartas {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
         gap: 2rem;
-        align-self: center;
     }
+
 
     .noticias {
         padding: 5rem;
@@ -167,11 +169,11 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        width: 80%;
 
     }
 
-    .noticias-text {
+    .equipo-text,
+    .eventos-text {
         width: 30%;
     }
 
@@ -183,6 +185,7 @@
         border: 0.15rem solid var(--gray);
         border-radius: 0.5rem;
         gap: 1.5rem;
+        width: 80%;
     }
 
     .noticia-inst {
@@ -333,8 +336,28 @@
         --position: 5;
     }
 
+
+
     /* Media-Queries */
     @media screen and (max-width: 768px) {
+        h1 {
+            font-size: var(--h1-tab);
+        }
+
+        h2 {
+            font-size: var(--h2-tab);
+        }
+
+        h3 {
+            font-size: var(--h3-tab);
+        }
+
+        p {
+            font-size: var(--text-tab);
+        }
+
+        .red,
+        .white,
         footer {
             font-size: var(--boton-tab);
         }
@@ -347,40 +370,68 @@
             width: 300%;
         }
 
-    }
-
-    @media screen and (max-width: 650px) {
-        nav {
-            justify-content: center;
-        }
-
-        .menu_nav ul {
-            display: none;
-        }
-
-        .logo_nav {
-            justify-content: center;
-            margin-left: 3rem;
-            width: 70%;
-            height: 70%;
-        }
-
-        .logo_nav img {
-            justify-content: center;
-            width: 80%;
-            height: 80%;
-            margin: auto;
-        }
-
-        .hamburguesa_menu {
+        .inicio {
             display: flex;
-            margin-right: 3rem;
-            font-size: 3rem;
+            flex-direction: column;
+            justify-content: center;
         }
 
+        .history {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .history-cartas {
+            justify-content: center;
+        }
+
+        .history-hecho {
+            width: 100%;
+        }
+
+        .noticias {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .noticias-text,
+        .history-text,
+        .equipo-text,
+        .eventos-text {
+            width: 80%;
+        }
+
+        .noticia {
+            width: 90%;
+            align-self: center;
+        }
     }
+
+
 
     @media screen and (max-width: 380px) {
+        h1 {
+            font-size: var(--h1-mov);
+        }
+
+        h2 {
+            font-size: var(--h2-mov);
+        }
+
+        h3 {
+            font-size: var(--h3-mov);
+        }
+
+        p {
+            font-size: var(--text-mov);
+        }
+
+        .red,
+        .white,
+        footer {
+            font-size: var(--boton-mov);
+        }
+
         footer {
             .marquee-infinite img {
                 width: 20%;
@@ -389,8 +440,5 @@
             .marquee-infinite div {
                 width: 500%;
             }
-
-            font-size: var(--boton-mov);
         }
-
     }
