--- a/plantillas.css
+++ b/plantillas.css
@@ -6,6 +6,7 @@ main{display:flex;
      background-repeat:repeat-y;
      background-size: 100%;
      margin-bottom: 5rem;
+     align-items: center;
     }
 /*div de contenedor de los 2 entrenadores*/
 .plantilla_entrenador{display: flex;
@@ -49,6 +50,7 @@ main{display:flex;
                     border: 0.1rem solid red;
                     padding: 0.1rem;
                     justify-content: center;
+                    align-items: center;
                    }
 /*div de la imagen del entrenador*/
 .imagenes_entrenadores{width: 60%;
@@ -67,12 +69,13 @@ main{display:flex;
                  /*display: block;*/
                  font-size: 10rem;
                  margin-bottom: 1rem;
+                 justify-content: center;
+                 align-items: center;
                  
                 }
 /*Efectos de agrandacion a la hora de poner el cursor*/
-/*@media screen and (max-width: 2000px){
-.plantilla_nombre_entrenadores:hover{width: 35%;
-                                      height: 35%;
+
+.plantilla_nombre_entrenadores:hover{
                                       background-color: red;
                                       backface-visibility: 90%;
                                       transition: 0.5s;
@@ -83,8 +86,7 @@ main{display:flex;
                                       box-shadow: 0px 15px 25px grey;
                                       position: relative;
                                      }
-.plantilla_nombre:hover{width: 25%;
-                         height: 25%;
+.plantilla_nombre:hover{
                          background-color: red;
                          backface-visibility: 90%;
                          transition: 0.5s;
@@ -94,7 +96,7 @@ main{display:flex;
                          box-shadow: 0px 5px 25px grey;
                          position: relative;                 
                         }
-                    }*/
+                 
 
 @media screen and (max-width: 1000px){
     .plantilla_nombre_entrenadores{width: 52%;}
@@ -103,23 +105,28 @@ main{display:flex;
     .plantilla_nombre{width:50%;
                       height: 50%;  
                      }
-   /* .plantilla_nombre_entrenadores:hover{display: flex;
-                                         width: 40%;
-                                         height: 40%;
-                                         flex-direction: column;
-                                         align-items: center;
-                                         justify-content: center; 
-                                         margin-top: 1rem;
+   .plantilla_nombre_entrenadores:hover{
+                                        background-color: none;
+                                        backface-visibility: none;
+                                        transition: none;
+                                        transition: none;
+                                        overflow: none;
+                                        transform: scale(1);
+                                        border-radius: none;
+                                        box-shadow: none;
+                                        position: none;
                                         }
-    .plantilla_nombre:hover{display: flex;
-                            width: 27%;
-                            height: 27%;
-                            flex-direction: column;
-                            align-items: center;
-                            justify-content: center; 
-                            margin-top: 1rem;  
-                            margin-bottom: 3rem; 
-                            }*/
+    .plantilla_nombre:hover{
+                            background-color: none;
+                            backface-visibility: none;
+                            transition: none;
+                            transition: none;
+                            overflow: none;
+                            transform: scale(1);
+                            border-radius: none;
+                            box-shadow: none;
+                            position: none;
+                            }
                         }
 @media screen and (max-width: 700px){
     .plantilla_nombre{width:70%;
@@ -130,21 +137,28 @@ main{display:flex;
     .plantilla_nombre_entrenadores{width: 72%;
                                    height: 72%;
                                   }
-  /*  .plantilla_nombre_entrenadores:hover{display: flex;
-                                         width: 40%;
-                                         height: 40%;
-                                         flex-direction: column;
-                                         align-items: center;
-                                         justify-content: center; 
-                                         margin-top: 1rem;
+  .plantilla_nombre_entrenadores:hover{width:none;
+                                           height: none;
+                                           background-color: none;
+                                           backface-visibility: none;
+                                           transition: none;
+                                           transition: none;
+                                           overflow: none;
+                                           transform: scale(1);
+                                           border-radius: none;
+                                           box-shadow: none;
+                                           position: none;
                                         }
-    .plantilla_nombre:hover{display: flex;
-                            width: 27%;
-                            height: 27%;
-                            flex-direction: column;
-                            align-items: center;
-                            justify-content: center; 
-                            margin-top: 1rem;  
-                            margin-bottom: 3rem; 
-                          }*/
+    .plantilla_nombre:hover{width:none;
+                            height: none;
+                            background-color: none;
+                            backface-visibility: none;
+                            transition: none;
+                            transition: none;
+                            overflow: none;
+                            transform: scale(1);
+                            border-radius: none;
+                            box-shadow: none;
+                            position: none;
+                          }
 }
