--- a/contacto.css
+++ b/contacto.css
@@ -1,7 +1,6 @@
 
 h1{
     color: white;
-    text-align: center;
     font-size: 3rem;
 }
 
@@ -17,13 +16,24 @@ main { background-image: url(img/canchatina.webp);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5rem;
-    padding-bottom: 8rem;
+    padding-top: 1rem;
 }
 
 form {
+    border: 0.3rem solid white;
+    border-radius: 3rem;
     width: 50rem;
     font-weight: 600;
+    margin-block: 3rem;
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
+}
+
+.mapa {
+    padding-left: 10rem;
+    padding-top: 5rem;
 
 }
 
@@ -40,12 +50,14 @@ input {
     padding: 0.6rem;
     margin-bottom: 1rem;
     box-sizing: border-box;
+    opacity: 0.5;
 }
 
 textarea {
     padding: 4rem;
     width: 84%;
     margin-bottom: 1rem;
+    opacity: 0.5;
 }
 
 button {
@@ -61,30 +73,20 @@ button:hover {
     background-color: #ac0b0b;
 }
 
-.dos {
+.informacion {
     color: white;
-
-}
-
-p { 
-    text-align: left;
-    font-size: 1.1rem;
-    margin-left: 6rem;
-    font-weight: 600;
 }
 
 h2 {
+    margin-top: rem;
     color: white;
     font-size: 2rem;
+    padding-bottom: 2rem;
 }
 
-
-
-
-iframe { 
-    padding: 10%;
-    width: 40rem;
-    height: 40rem;
+p {
+    font-weight: 600;
+    padding-bottom: 1rem;
 }
 
 
